# beecoptergroundcontrol

./: CMakeLists.txt  beeCopterResources.qrc  build.bat  debug_build.bat  run.bat
cmake/: BuildConfig.cmake  CompilerWarnings.cmake  CustomOptions.cmake  Helpers.cmake  PrintSummary.cmake  Toolchain.cmake  beeCopterTest.cmake
cmake/find-modules/: FindGStreamer.cmake
cmake/install/: CreateAppImage.cmake  CreateMacDMG.cmake  CreateWinInstaller.cmake  CreatebeeCopterInstaller.cmake  Install.cmake  SignMacBundle.cmake
cmake/modules/: CMakeGraphVizOptions.cmake  Coverage.cmake  Git.cmake  IWYU.cmake  Sanitizers.cmake
cmake/platform/: Android.cmake  Apple.cmake  Linux.cmake  Windows.cmake
custom-example/: CMakeLists.txt  custom.qrc
custom-example/cmake/: CustomOverrides.cmake
src/: CMakeLists.txt  beeCopterApplication.cc  beeCopterApplication.h  main.cc
src/ADSB/: ADSBTCPLink.cc  ADSBVehicle.cc  ADSBVehicleManager.cc
src/API/: CMakeLists.txt  QmlComponentInfo.cc  beeCopterCorePlugin.cc  beeCopterCorePlugin.h  beeCopterOptions.cc  beeCopterOptions.h
src/AnalyzeView/: AnalyzeView.qml  CMakeLists.txt  LogDownloadController.cc  LogDownloadController.h  LogDownloadPage.qml  LogEntry.cc  LogEntry.h  MAVLinkChartController.cc  MAVLinkChartController.h  MAVLinkConsoleController.cc  MAVLinkConsoleController.h  MAVLinkConsolePage.qml  MAVLinkInspectorController.cc  MAVLinkInspectorController.h  MAVLinkInspectorPage.qml  MAVLinkMessage.cc  MAVLinkMessage.h  MAVLinkMessageField.cc  MAVLinkMessageField.h  MAVLinkSystem.cc  MAVLinkSystem.h  VibrationPage.qml
src/Android/: AndroidEvents.cc  AndroidInit.cc  AndroidInterface.cc  AndroidInterface.h  AndroidSerial.cc  AndroidSerial.h
src/AutoPilotPlugins/: AutoPilotPlugin.cc  AutoPilotPlugin.h  CMakeLists.txt  VehicleComponent.cc
src/Camera/: CMakeLists.txt  CameraMetaData.cc  MavlinkCameraControl.cc  MavlinkCameraControl.h  SimulatedCameraControl.cc  SimulatedCameraControl.h  VehicleCameraControl.cc  VehicleCameraControl.h  beeCopterCameraIO.cc  beeCopterCameraIO.h  (+4 more)
src/Comms/: BluetoothLink.cc  CMakeLists.txt  LinkConfiguration.cc  LinkConfiguration.h  LinkInterface.cc  LinkManager.cc  LinkManager.h  LogReplayLink.cc  LogReplayLinkController.cc  MAVLinkProtocol.cc  MAVLinkProtocol.h  SerialLink.cc  TCPLink.cc  UDPLink.cc  UDPLink.h  UdpIODevice.cc  beeCopterSerialPortInfo.cc  beeCopterSerialPortInfo.h
src/Comms/MockLink/: MockConfiguration.cc  MockConfiguration.h  MockLink.General.MetaData.json  MockLink.cc  MockLink.h  MockLinkCamera.cc  MockLinkFTP.cc  MockLinkMissionItemHandler.cc
src/QtLocationPlugin/: CMakeLists.txt  QGeoFileTileCachebeeCopter.h  QGeoMapReplybeeCopter.h  QGeoServiceProviderPluginbeeCopter.h  QGeoTileFetcherbeeCopter.h  QGeoTiledMapbeeCopter.h  QGeoTiledMappingManagerEnginebeeCopter.h  beeCopterCacheTile.h  beeCopterCachedTileSet.h  beeCopterMapEngine.cpp  beeCopterMapEngine.h  beeCopterMapEngineManager.cc  beeCopterMapEngineManager.h  beeCopterMapTasks.h  beeCopterMapUrlEngine.cpp  beeCopterMapUrlEngine.h  beeCopterTile.h  beeCopterTileCacheDatabase.cpp  beeCopterTileCacheDatabase.h  beeCopterTileCacheWorker.h  beeCopterTileSet.h  beeCopter_maps_plugin.json
src/QtLocationPlugin/Providers/: ElevationMapProvider.cpp  ElevationMapProvider.h  EsriMapProvider.h  GenericMapProvider.h  GoogleMapProvider.h  MapProvider.cpp  MapProvider.h  MapboxMapProvider.h
src/Utilities/: CMakeLists.txt  DeviceInfo.cc  DeviceInfo.h  JsonHelper.cc  JsonHelper.h  StateMachine.cc  beeCopter.cc  beeCopter.h  beeCopterCommandLineParser.cc  beeCopterCommandLineParser.h  beeCopterLogging.cc  beeCopterLogging.h  beeCopterLoggingCategory.cc  beeCopterLoggingCategory.h
src/Utilities/Audio/: AudioOutput.cc
src/Utilities/Compression/: CMakeLists.txt  beeCopterArchiveDeviceBase.cc  beeCopterArchiveDeviceBase.h  beeCopterArchiveFile.cc  beeCopterArchiveFile.h  beeCopterArchiveModel.cc  beeCopterArchiveModel.h  beeCopterCompression.cc  beeCopterCompression.h  beeCopterCompressionJob.cc  beeCopterCompressionJob.h  beeCopterCompressionTypes.h  beeCopterDecompressDevice.cc  beeCopterDecompressDevice.h  beeCopterlibarchive.cc  beeCopterlibarchive.h
src/Utilities/FileSystem/: beeCopterArchiveWatcher.cc  beeCopterArchiveWatcher.h  beeCopterCachedFileDownload.cc  beeCopterCachedFileDownload.h  beeCopterFileDownload.cc  beeCopterFileDownload.h  beeCopterFileHelper.cc  beeCopterFileHelper.h  beeCopterFileWatcher.cc  beeCopterFileWatcher.h
src/Utilities/Geo/: CMakeLists.txt  GeoJsonHelper.cc  KMLDomDocument.cc  KMLHelper.cc  KMLSchemaValidator.cc  SHPFileHelper.cc  ShapeFileHelper.cc  beeCopterGeo.cc  beeCopterGeo.h
src/Utilities/Network/: CMakeLists.txt  beeCopterNetworkHelper.cc  beeCopterNetworkHelper.h
src/Utilities/Parsing/DataFlash/: DataFlashUtility.cc
src/Utilities/Parsing/Exif/: CMakeLists.txt  ExifUtility.cc
src/Utilities/Parsing/Json/: JsonParsing.cc
src/Utilities/Parsing/ULog/: CMakeLists.txt  ULogUtility.cc
src/Utilities/Platform/: Platform.cc  Platform.h  RunGuard.cc  SignalHandler.cc
src/Utilities/SDL/: CMakeLists.txt  SDLJoystick.cc  SDLJoystick.h
src/Utilities/StateMachine/: CMakeLists.txt  DelayState.cc  DelayState.h  FunctionState.cc  FunctionState.h  SendMavlinkCommandState.cc  SendMavlinkCommandState.h  SendMavlinkMessageState.cc  SendMavlinkMessageState.h  ShowAppMessageState.cc  ShowAppMessageState.h  WaitForMavlinkMessageState.cc  WaitForMavlinkMessageState.h  beeCopterFinalState.cc  beeCopterFinalState.h  beeCopterState.cc  beeCopterState.h  beeCopterStateMachine.cc  beeCopterStateMachine.h
test/: CMakeLists.txt
test/Camera/: CMakeLists.txt
test/Comms/: CMakeLists.txt
test/FactSystem/: CMakeLists.txt
test/MissionManager/: CMakeLists.txt
test/QtLocationPlugin/: CMakeLists.txt
test/UnitTestFramework/ApprovalTesting/: CMakeLists.txt
test/UnitTestFramework/Benchmarking/: CMakeLists.txt
test/UnitTestFramework/PropertyTesting/: CMakeLists.txt
test/Utilities/Compression/: CMakeLists.txt
test/Utilities/FileSystem/: CMakeLists.txt
test/Utilities/Network/: CMakeLists.txt
(+747 files in other folders)
